修改验证码服务添加服务注册功能；修改服务熔断超时时间